# kline

./: .gitignore  CMakeLists.txt  README.md  index.html  index.js  index.wasm  main.cpp
.claude/: settings.local.json
android/: README.md  settings.gradle  setup.sh
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  android_main.cpp  game_chart.h  game_state.h  game_types.h
android/app/src/main/java/com/kline/rpg/: MainActivity.java
shared/: game_chars.h  game_mesh.h
web/: index.wasm
